--- a/configuration/octopus_agile.yaml
+++ b/configuration/octopus_agile.yaml
@@ -1,6 +1,6 @@
-####################################
-# Octopus Energy
-####################################
+# ####################################
+# # Octopus Energy
+# ####################################
 octopusagile:
   region_code: !secret octopus_region
   mpan: !secret octopus_mpan
