--- a/binary_sensors/trend.yaml
+++ b/binary_sensors/trend.yaml
@@ -3,36 +3,102 @@
 # ####################################
 - platform: trend
   sensors:
-    bathroom_humidity_trend:
-      friendly_name: "Bathroom Humidity Trend"
-      entity_id: sensor.bathroom_humidity
+
+# Humidity
+
+    area_bathroom_humidity_trend:
+      friendly_name: Area - Bathroom Humidity Trend
+      entity_id: sensor.area_bathroom_humidity
       sample_duration: 1200
       max_samples: 6
       min_gradient: 0.011
       device_class: moisture
-- platform: trend
-  sensors:
-    bathroom_temperature_trend:
-      friendly_name: "Bathroom Temperature Trend"
-      entity_id: sensor.bathroom_temperature
+
+    area_kitchen_humidity_trend:
+      friendly_name: Area - Kitchen Humidity Trend
+      entity_id: sensor.area_kitchen_humidity
+      sample_duration: 1200
+      max_samples: 6
+      min_gradient: 0.011
+      device_class: moisture
+
+    area_outside_humidity_trend:
+      friendly_name: Area - Outside Humidity Trend
+      entity_id: sensor.area_outside_humidity
+      sample_duration: 1200
+      max_samples: 6
+      min_gradient: 0.011
+      device_class: moisture
+
+    area_shed_humidity_trend:
+      friendly_name: Area - Shed Humidity Trend
+      entity_id: sensor.area_shed_humidity
+      sample_duration: 1200
+      max_samples: 6
+      min_gradient: 0.011
+      device_class: moisture
+
+# Temperature
+
+    area_bathroom_temperature_trend:
+      friendly_name: Area - Bathroom Temperature Trend
+      entity_id: sensor.area_bathroom_temperature
       sample_duration: 1200
       max_samples: 6
       min_gradient: 0.0017
       device_class: heat
-- platform: trend
-  sensors:
-    bathroom_humidity_trend:
-      friendly_name: "Kitchen Humidity Trend"
-      entity_id: sensor.kitchen_humidity
+
+    area_bedroom_temperature_trend:
+      friendly_name: Area - Bedroom Temperature Trend
+      entity_id: sensor.area_bedroom_temperature
       sample_duration: 1200
       max_samples: 6
-      min_gradient: 0.011
-      device_class: moisture
-- platform: trend
-  sensors:
-    kitchen_temperature_trend:
-      friendly_name: "Kitchen Temperature Trend"
-      entity_id: sensor.kitchen_temperature
+      min_gradient: 0.0017
+      device_class: heat
+
+    area_entrance_temperature_trend:
+      friendly_name: Area - Entrance Temperature Trend
+      entity_id: sensor.area_entrance_temperature
+      sample_duration: 1200
+      max_samples: 6
+      min_gradient: 0.0017
+      device_class: heat
+
+    area_hall_temperature_trend:
+      friendly_name: Area - Hall Temperature Trend
+      entity_id: sensor.area_hall_temperature
+      sample_duration: 1200
+      max_samples: 6
+      min_gradient: 0.0017
+      device_class: heat
+
+    area_kitchen_temperature_trend:
+      friendly_name: Area - Kitchen Temperature Trend
+      entity_id: sensor.area_kitchen_temperature
+      sample_duration: 1200
+      max_samples: 6
+      min_gradient: 0.0017
+      device_class: heat
+
+    area_lounge_temperature_trend:
+      friendly_name: Area - Lounge Temperature Trend
+      entity_id: sensor.area_lounge_temperature
+      sample_duration: 1200
+      max_samples: 6
+      min_gradient: 0.0017
+      device_class: heat
+
+    area_study_temperature_trend:
+      friendly_name: Area - Study Temperature Trend
+      entity_id: sensor.area_study_temperature
+      sample_duration: 1200
+      max_samples: 6
+      min_gradient: 0.0017
+      device_class: heat
+
+    area_toilet_temperature_trend:
+      friendly_name: Area - Toilet Temperature Trend
+      entity_id: sensor.area_toilet_temperature
       sample_duration: 1200
       max_samples: 6
       min_gradient: 0.0017
