--- a/configuration/google.yaml
+++ b/configuration/google.yaml
@@ -1,3 +1,3 @@
-google:
-  client_id: !secret google_client_id
-  client_secret: !secret google_secret
+# google:
+#   client_id: !secret google_client_id
+#   client_secret: !secret google_secret
