--- a/configuration/shell_command.yaml
+++ b/configuration/shell_command.yaml
@@ -2,12 +2,12 @@
 # Shell Commands
 ####################################
 shell_command:
-  loungecam_turn_off: !secret loungecam_turn_off
-  loungecam_turn_on: !secret loungecam_turn_on
-  loungecam_floor: !secret loungecam_floor
-  hallcam_turn_off: !secret hallcam_turn_off
-  hallcam_turn_on: !secret hallcam_turn_on
-  hallcam_bedroom: !secret hallcam_bedroom
-  hallcam_study: !secret hallcam_study
-  hallcam_landing: !secret hallcam_landing
-  hallcam_stairs: !secret hallcam_stairs
+  lounge_camera_turn_off: !secret loungecam_turn_off
+  lounge_camera_turn_on: !secret loungecam_turn_on
+  lounge_camera_floor: !secret loungecam_floor
+  hall_camera_turn_off: !secret hallcam_turn_off
+  hall_camera_turn_on: !secret hallcam_turn_on
+  hall_camera_bedroom: !secret hallcam_bedroom
+  hall_camera_study: !secret hallcam_study
+  hall_camera_landing: !secret hallcam_landing
+  hall_camera_stairs: !secret hallcam_stairs
