--- a/sensors/averages.yaml
+++ b/sensors/averages.yaml
@@ -2,89 +2,175 @@
 # Temperature
 ####################################
 - platform: min_max
-  name: Bathroom Temperature
+  name: Area - Bathroom Temperature
   type: mean
   round_digits: 1
   entity_ids:
     - sensor.tmp_02_temperature
     - sensor.rad_01_temperature
     - sensor.bathroom_multisensor_air_temperature
+
 - platform: min_max
-  name: Bedroom Temperature
+  name: Area - Bedroom Temperature
   type: mean
   round_digits: 1
   entity_ids:
     - sensor.rad_02_temperature
     - sensor.bedroom_trisensor_air_temperature
+
 - platform: min_max
-  name: Entrance Temperature
+  name: Area - Entrance Temperature
   type: mean
   round_digits: 1
   entity_ids:
     - sensor.tst_01_temperature
     - sensor.toilet_trisensor_air_temperature
+
 - platform: min_max
-  name: Hall Temperature
+  name: Area - Hall Temperature
   type: mean
   round_digits: 1
   entity_ids:
     - sensor.tst_01_temperature
     - sensor.hall_trisensor_air_temperature
+
 - platform: min_max
-  name: Kitchen Temperature
+  name: Area - Kitchen Temperature
   type: mean
   round_digits: 1
   entity_ids:
     - sensor.kitchen_trisensor_air_temperature
     - sensor.tmp_03_temperature
+
 - platform: min_max
-  name: Lounge Temperature
+  name: Area - Lounge Temperature
   type: mean
   round_digits: 1
   entity_ids:
     - sensor.lounge_trisensor_air_temperature
+
 - platform: min_max
-  name: Study Temperature
+  name: Area - Study Temperature
   type: mean
   round_digits: 1
   entity_ids:
     - sensor.rad_03_temperature
     - sensor.study_trisensor_air_temperature
+
 - platform: min_max
-  name: Toilet Temperature
+  name: Area - Toilet Temperature
   type: mean
   round_digits: 1
   entity_ids:
     - sensor.rad_04_temperature
     - sensor.toilet_trisensor_air_temperature
+
 - platform: min_max
-  name: Shed Temperature
+  name: Area - Shed Temperature
   type: mean
   round_digits: 1
   entity_ids:
     - sensor.tmp_01_temperature
-    - sensor.outside_temperature
+    - sensor.area_outside_temperature
+
 ####################################
 # Humidity
 ####################################
 - platform: min_max
-  name: Bathroom Humidity
+  name: Area - Bathroom Humidity
   type: mean
-  round_digits: 0
+  round_digits: 1
   entity_ids:
     - sensor.tmp_02_humidity
     - sensor.bathroom_multisensor_humidity
+
 - platform: min_max
-  name: Kitchen Humidity
+  name: Area - Kitchen Humidity
   type: mean
-  round_digits: 0
+  round_digits: 1
   entity_ids:
     - sensor.tmp_03_humidity
-    - sensor.outside_humidity
+    - sensor.area_outside_humidity
+
 - platform: min_max
-  name: Shed Humidity
+  name: Area - Shed Humidity
   type: mean
-  round_digits: 0
+  round_digits: 1
   entity_ids:
     - sensor.tmp_01_humidity
-    - sensor.outside_humidity
+    - sensor.area_outside_humidity
+
+####################################
+# Illuminance
+####################################
+- platform: min_max
+  name: Area - Bathroom Illuminance
+  type: mean
+  round_digits: 1
+  entity_ids:
+    - sensor.bathroom_multisensor_illuminance
+    - sensor.lux_02_illuminance_lux
+
+- platform: min_max
+  name: Area - Bedroom Illuminance
+  type: mean
+  round_digits: 1
+  entity_ids:
+    - sensor.bedroom_trisensor_illuminance
+    - sensor.lux_05_illuminance_lux
+
+- platform: min_max
+  name: Area - Entrance Illuminance
+  type: mean
+  round_digits: 1
+  entity_ids:
+    - sensor.entrance_tablet_light
+    - sensor.lux_04_illuminance_lux
+
+- platform: min_max
+  name: Area - Hall Illuminance
+  type: mean
+  round_digits: 1
+  entity_ids:
+    - sensor.hall_trisensor_illuminance
+    - sensor.lux_07_illuminance_lux
+
+- platform: min_max
+  name: Area - Kitchen Illuminance
+  type: mean
+  round_digits: 1
+  entity_ids:
+    - sensor.kitchen_trisensor_illuminance
+    - sensor.lux_01_illuminance_lux
+
+- platform: min_max
+  name: Area - Lounge Illuminance
+  type: mean
+  round_digits: 1
+  entity_ids:
+    - sensor.lounge_trisensor_illuminance
+    - sensor.lux_08_illuminance_lux
+
+- platform: min_max
+  name: Area - Study Illuminance
+  type: mean
+  round_digits: 1
+  entity_ids:
+    - sensor.study_trisensor_illuminance
+    - sensor.lux_09_illuminance_lux
+
+- platform: min_max
+  name: Area - Toilet Illuminance
+  type: mean
+  round_digits: 1
+  entity_ids:
+    - sensor.toilet_trisensor_illuminance
+    - sensor.lux_06_illuminance_lux
+
+- platform: min_max
+  name: Area - Home Incoming Illuminance
+  type: mean
+  round_digits: 1
+  entity_ids:
+    - sensor.lux_03_illuminance_lux
+    - sensor.lux_04_illuminance_lux
