--- a/sensors/google_fit.yaml
+++ b/sensors/google_fit.yaml
@@ -1,4 +1,4 @@
-- platform: google_fit
-  name: Seb
-  client_id: !secret google_client_id
-  client_secret: !secret google_secret
+# - platform: google_fit
+#   name: Seb
+#   client_id: !secret google_client_id
+#   client_secret: !secret google_secret
