--- a/custom_components/powercalc/manifest.json
+++ b/custom_components/powercalc/manifest.json
@@ -19,6 +19,8 @@
     "iot_class": "local_polling",
     "issue_tracker": "https://github.com/bramstroker/homeassistant-powercalc/issues",
     "name": "Power consumption",
-    "requirements": [],
-    "version": "v0.8.1"
+    "requirements": [
+        "numpy>=1.21.1"
+    ],
+    "version": "v0.9.1"
 }
